Ajout de la configuration maven-compiler-plugin pour résoudre l’IllegalAccessError Lombok